@@ -1,3 +1,5 @@
+#include <qdom.h>
+
 #include "transfer.h"
 #include "scheduler.h"
 #include "viewinterface.h"
@@ -11,7 +13,8 @@ Transfer::Transfer(Scheduler * _scheduler, const KURL & _src, const KURL & _dest
     info.priority=3;
     info.totalSize=0;
     info.processedSize=0;
-    info.percent=0;            
+    info.percent=0;
+    info.speed=0;            
     
     connect(this, 
             SIGNAL(statusChanged(Transfer *, Transfer::TransferStatus)),
@@ -23,7 +26,27 @@ Transfer::Transfer(Scheduler * _scheduler, const KURL & _src, const KURL & _dest
             sched,
             SLOT(slotTransferProgressChanged(Transfer *, Transfer::ProgressChange)));
 }
-              
+
+Transfer::Transfer(Scheduler * _scheduler, QDomDocument * doc, QDomNode * e)
+        : sched(_scheduler)
+
+{
+    info.speed=0;
+    
+    read(doc, e);
+    
+    connect(this, 
+            SIGNAL(statusChanged(Transfer *, Transfer::TransferStatus)),
+            sched,
+            SLOT(slotTransferStatusChanged(Transfer *, Transfer::TransferStatus)));
+
+    connect(this, 
+            SIGNAL(progressChanged(Transfer *, Transfer::ProgressChange)),
+            sched,
+            SLOT(slotTransferProgressChanged(Transfer *, Transfer::ProgressChange)));
+
+}
+             
 const Transfer::Info& Transfer::getInfo() const
 {    
     return info;
@@ -82,7 +105,7 @@ void Transfer::setGroup(const QString& group)
 
 void Transfer::about() const
 {
-    /* debug function */
+    kdDebug() << "TRANSFER: (" << this << ") " << info.src.fileName() << endl;
 }
 
 void Transfer::setProgressChange(ProgressChange p)
@@ -90,4 +113,81 @@ void Transfer::setProgressChange(ProgressChange p)
     int vectorSize = progressChanges.size();
     for(int i=0; i<vectorSize; i++)
         progressChanges[i] |= p;
+}
+
+bool Transfer::read(QDomDocument * doc, QDomNode * n)
+{
+    sDebugIn << endl;
+
+/*    t.setAttribute("Group", info.group);
+    t.setAttribute("Priority", info.priority);
+    t.setAttribute("Status", info.status);
+    t.setAttribute("Source", info.src.url());
+    t.setAttribute("Dest", info.dest.url());
+    t.setAttribute("TotalSize", info.totalSize);
+    t.setAttribute("ProcessedSize", info.processedSize);
+    t.setAttribute("Percent", info.percent);*/
+    
+    QDomElement e = n->toElement();
+    
+    info.group = e.attribute("Group");
+    info.priority = e.attribute("Priority").toInt();
+    info.status = (TransferStatus) e.attribute("Status").toInt();
+    info.src = KURL::fromPathOrURL(e.attribute("Source"));
+    info.dest = KURL::fromPathOrURL(e.attribute("Dest"));
+    info.totalSize = e.attribute("TotalSize").toInt();
+    info.processedSize = e.attribute("ProcessedSize").toInt();
+    info.percent = e.attribute("Percent").toULong();
+
+// 	if ( !(info.group = node.attribute("Group")).isNull())
+// 		board->setName(value);
+
+/*    QString str;
+    str.sprintf("Item%d", id);
+    config->setGroup(str);
+
+    if (src.isEmpty() || dest.isEmpty()) {
+        return false;
+    }
+
+    if (!src.isValid() && !ksettings.b_expertMode) {
+        KMessageBox::error(kmain, i18n("Malformed URL:\n") + src.url(), i18n("Error"));
+        return false;
+    }
+
+    mode = (TransferMode) config->readNumEntry("Mode", MD_QUEUED);
+    status = (TransferStatus) config->readNumEntry("Status", ST_RUNNING);
+    startTime = config->readDateTimeEntry("ScheduledTime");
+    canResume = config->readBoolEntry("CanResume", true);
+    totalSize = config->readNumEntry("TotalSize", 0);
+    processedSize = config->readNumEntry("ProcessedSize", 0);
+
+    if (status != ST_FINISHED && totalSize != 0) {
+        //TODO insert additional check
+        status = ST_STOPPED;
+    }
+
+    updateAll();*/
+    sDebugOut << endl;
+    return true;
+}
+
+
+void Transfer::write(QDomDocument * doc, QDomNode * n)
+{
+    sDebugIn << endl;
+    
+    QDomElement t = doc->createElement("Transfer");
+    n->appendChild(t);
+    
+    t.setAttribute("Group", info.group);
+    t.setAttribute("Priority", info.priority);
+    t.setAttribute("Status", info.status);
+    t.setAttribute("Source", info.src.url());
+    t.setAttribute("Dest", info.dest.url());
+    t.setAttribute("TotalSize", info.totalSize);
+    t.setAttribute("ProcessedSize", info.processedSize);
+    t.setAttribute("Percent", info.percent);
+    
+    sDebugOut << endl;
 }
